--- a/unplugged-retreat/css/main.css
+++ b/unplugged-retreat/css/main.css
@@ -120,8 +120,8 @@ h3,
 h4 {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
-  margin: 20px 0;
   font-size: 1.125em;
+  margin: 20px 0;
 }
 
 p {
@@ -130,9 +130,11 @@ p {
 }
 
 img {
+  width: 100%;
+}
 
-  /* will add later */
-
+figure {
+  margin: 0;
 }
 
 address {
@@ -152,7 +154,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  align-items: center;
+  flex-flow: row wrap;
 }
 
 header {
@@ -165,6 +167,14 @@ header .content-wrapper {
   align-items: center;
   flex-flow: row wrap;
   margin: 0;
+}
+
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .header-divider {
@@ -189,6 +199,10 @@ header nav ul {
   width: 100%;
   display: flex;
   justify-content: space-around;
+}
+
+header nav ul li {
+  font-size: 1.125em;
 }
 
 footer {
@@ -230,6 +244,10 @@ footer .copyright {
 /* Hero Area */
 
 .hero-area {
+  background:url(../img/unplugged-retreat.png);
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -245,7 +263,7 @@ footer .copyright {
 /* Aside */
 
 aside {
-  background: #527158;
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -281,6 +299,9 @@ input[type=button] {
 /* Features */
 
 .features {
+  background:url('../img/unplugged-retreat-features.png');
+  background-size: center;
+  background-position: center;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -487,7 +508,7 @@ input[type=button] {
   }
 
   h3 {
-    line-height: 1.5em;
+    font-size: 1.5em;
     line-height: 1.25;
   }
 
@@ -507,7 +528,7 @@ input[type=button] {
   }
 
   header nav {
-    width: 20%;
+    width: 30%;
   }
 
   header nav ul {
@@ -520,6 +541,10 @@ input[type=button] {
 
   /* Hero Area */
 
+  .hero-area {
+    min-height: 600px;
+  }
+
   .hero-area h1 {
     font-size: 3em;
     line-height: 1;
@@ -527,6 +552,7 @@ input[type=button] {
   }
 
   /* Aside */
+
   aside .content-wrapper {
     margin: 50px 0;
     display: flex;
@@ -559,6 +585,7 @@ input[type=button] {
   }
 
   /* Reviews */
+
   .reviews article {
     display: flex;
     justify-content: space-between;
@@ -568,11 +595,18 @@ input[type=button] {
     width: 85%;
   }
 
+  .reviews article figure,
   .reviews article div {
     width: 49%;
   }
 
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
+  }
+
   /* Footer */
+
   footer .content-wrapper {
     width: 65%;
     margin: 100px 0;
@@ -680,12 +714,14 @@ input[type=button] {
   }
 
   /* Hero */
+
   .hero-area h1 {
     font-size: 3.75em;
-    width: 60%;
+    width: 80%;
   }
 
   /* Aside */
+
   aside .content-wrapper {
     justify-content: space-around;
   }
@@ -700,6 +736,7 @@ input[type=button] {
   }
 
   /* Features */
+
   .features h2 {
     width: 90%;
   }
@@ -729,6 +766,7 @@ input[type=button] {
   .mission h2,
   .contact-section .content-wrapper h2 {
     width: 95%;
+    font-size: 3em;
   }
 
   .contact-content h4 {
