--- a/unplugged-retreat/css/main.css
+++ b/unplugged-retreat/css/main.css
@@ -351,6 +351,14 @@ input[type=button] {
    About Page
    ========================================================================== */
 
+.mission {
+  background-color: #527158;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 .map figure {
   width: 100%;
   height: 0;
@@ -365,14 +373,6 @@ input[type=button] {
   position: absolute;
   top: 0;
   left: 0;
-}
-
-.mission {
-  background-color: #527158;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
 }
 
 .contact-section {
@@ -666,6 +666,10 @@ input[type=button] {
   .mission-content p {
     width: 45%;
   }
+
+  .map figure {
+    padding-bottom: 45.5%;
+  }
   
   .contact-section .content-wrapper h2 {
     width: 80%;
@@ -778,6 +782,10 @@ input[type=button] {
   /* ==========================================================================
   About Page
   ========================================================================== */
+  
+  .map figure {
+    padding-bottom: 37.5%;
+  }
   
   .mission h2,
   .contact-section .content-wrapper h2 {
