--- a/unplugged-retreat/css/main.css
+++ b/unplugged-retreat/css/main.css
@@ -11,111 +11,114 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
-html {
-  color: #222;
-  font-size: 1em;
-  line-height: 1.4;
-}
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Vendor-prefixed and regular ::selection selectors cannot be combined:
- * https://stackoverflow.com/a/16982510/7133471
- *
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-::selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-  resize: vertical;
-}
-
+   html {
+    color: #222;
+    font-size: 1em;
+    line-height: 1.4;
+  }
+  
+  /*
+   * Remove text-shadow in selection highlight:
+   * https://twitter.com/miketaylr/status/12228805301
+   *
+   * Vendor-prefixed and regular ::selection selectors cannot be combined:
+   * https://stackoverflow.com/a/16982510/7133471
+   *
+   * Customize the background color to match your design.
+   */
+  
+  ::-moz-selection {
+    background: #b3d4fc;
+    text-shadow: none;
+  }
+  
+  ::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+  }
+  
+  /*
+   * A better looking default horizontal rule
+   */
+  
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+  }
+  
+  /*
+   * Remove the gap between audio, canvas, iframes,
+   * images, videos and the bottom of their containers:
+   * https://github.com/h5bp/html5-boilerplate/issues/440
+   */
+  
+  audio,
+  canvas,
+  iframe,
+  img,
+  svg,
+  video {
+    vertical-align: middle;
+  }
+  
+  /*
+   * Remove default fieldset styles.
+   */
+  
+  fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
+  
+  /*
+   * Allow only vertical resizing of textareas.
+   */
+  
+  textarea {
+    resize: vertical;
+  }
+  
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
 /* General Styles */
-
+  
 html {
   font-size: 16px;
 }
-
+  
 body {
   font-size: 1em;
   font-family: 'Open Sans', sans-serif;
   color: #e2e3ed;
   text-align: left;
 }
-
+  
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
-
+  
 a {
   color: #e2e3ed;
   text-decoration: none;
 }
-
+  
 h2 {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.875em;
+  margin: 0;
 }
-
+  
 h3, 
 h4 {
   font-family: 'Poppins', sans-serif;
@@ -123,31 +126,31 @@ h4 {
   font-size: 1.125em;
   margin: 20px 0;
 }
-
+  
 p {
   font-size: 0.875em;
   line-height: 1.285;
 }
-
+  
 img {
   width: 100%;
 }
-
+  
 figure {
   margin: 0;
 }
-
+  
 address {
   font-style: normal;
 }
-
+  
 .content-wrapper {
   width: 90%;
-  margin: 50px 0;
+  margin: 15px 0 50px;
 }
-
+  
 /* ------------------ Base Header - Footer Styles -------------------- */
-
+  
 header,
 footer {
   background-color: #202322;
@@ -156,19 +159,19 @@ footer {
   align-items: center;
   flex-flow: row wrap;
 }
-
+  
 header {
   padding: 15px 0;
 }
-
+  
 header .content-wrapper {
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin: 0;
 }
-
+  
 header figure {
   width: 60%;
   display: flex;
@@ -176,14 +179,14 @@ header figure {
   align-items: center;
   flex-flow: row wrap;
 }
-
+  
 .header-divider {
   background: #3a3a3a;
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
 }
-
+  
 header nav {
   width: 60%;
   font-size: 1.125em;
@@ -194,41 +197,41 @@ header nav {
   align-items: center;
   flex-flow: row wrap;
 }
-
+  
 header nav ul {
   width: 100%;
   display: flex;
   justify-content: space-around;
 }
-
+  
 header nav ul li {
   font-size: 1.125em;
 }
-
+  
 footer {
   text-align: center;
   flex-direction: column;
 }
-
+  
 footer p {
   margin: 0;
 }
-
+  
 footer .content-wrapper {
   width: 55%;
-  margin: 50px 0;
+  margin: 30px 0;
 }
-
+  
 footer .contact {
   margin-bottom: 50px;
 }
-
+  
 footer .social-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-
+  
 footer .social-icons p {
   background-color: #527158;
   border-radius: 50%;
@@ -238,21 +241,21 @@ footer .social-icons p {
   justify-content: center;
   align-items: center;
 }
-
+  
 footer .social-icons p i {
   font-size: 1.3125em;
 }
-
+  
 footer .copyright {
   margin: 20px 0;
 }
-
+  
 /* ---------------------- Mobile Styles - Homepage ------------------------- */
-
+  
 /* Hero Area */
-
+  
 .hero-area {
-  background:url(../img/unplugged-retreat.png);
+  background: url(../img/unplugged-retreat.png);
   background-size: cover;
   background-position: center;
   min-height: 500px;
@@ -263,9 +266,9 @@ footer .copyright {
 
 .hero-area h1 {
   font-size: 2.25em;
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
-  font-weight: 500;
-  line-height: 1.2;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif; 
+  font-weight: 500; 
+  line-height: 1.2; 
 }
 
 /* Aside */
@@ -281,7 +284,7 @@ aside {
 aside .form {
   margin-top: 30px;
 }
- 
+
 input[type=text] {
   box-sizing: border-box;
   width: 100%;
@@ -289,7 +292,7 @@ input[type=text] {
   font-style: italic;
   padding: 1em;
 }
- 
+
 input[type=button] {
   width: 100%;
   padding: 20px 0;
@@ -307,8 +310,8 @@ input[type=button] {
 /* Features */
 
 .features {
-  background:url('../img/unplugged-retreat-features.png');
-  background-size: center;
+  background: url('../img/unplugged-retreat-features.png');
+  background-size: cover;
   background-position: center;
   display: flex;
   justify-content: center;
@@ -316,7 +319,7 @@ input[type=button] {
 }
 
 .features h2 {
-  margin-bottom: 60px;
+  margin: 40px 0 20px 0;
 }
 
 .features article {
@@ -353,6 +356,7 @@ input[type=button] {
 .reviews h2 {
   margin-bottom: 40px;
   line-height: 1;
+  padding-top: 40px;
 }
 
 .reviews h3 {
@@ -370,12 +374,13 @@ input[type=button] {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding-top: 30px;
 }
 
 .map figure {
   width: 100%;
-  height: 0;
-  padding-bottom: 125%;
+  height: 0; 
+  padding-bottom: 125%; 
   overflow: hidden;
   position: relative;
 }
@@ -383,9 +388,9 @@ input[type=button] {
 .map iframe {
   width: 100%;
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: absolute; 
+  top: 0; 
+  left: 0; 
 }
 
 .contact-section {
@@ -394,6 +399,7 @@ input[type=button] {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  padding-top: 40px;
 }
 
 .contact-content p {
@@ -421,18 +427,17 @@ input[type=button] {
 }
 
 .faq h2 {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   line-height: 1;
 }
 
 .faq-content {
-  margin-bottom: 50px;
+  margin-bottom: 15px;
 }
 
 .faq-content h4 {
   line-height: 1.333;
 }
-
 
 /* ==========================================================================
    Helper classes
@@ -442,8 +447,7 @@ input[type=button] {
  * Hide visually and from screen readers
  */
 
-.hidden,
-[hidden] {
+.hidden {
   display: none !important;
 }
 
@@ -456,34 +460,34 @@ input[type=button] {
  *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
  */
 
-.sr-only {
+.visuallyhidden {
   border: 0;
-  clip: rect(0, 0, 0, 0);
+  clip: rect(0 0 0 0);
   height: 1px;
   margin: -1px;
   overflow: hidden;
   padding: 0;
   position: absolute;
-  white-space: nowrap;
   width: 1px;
+  white-space: nowrap;
   /* 1 */
 }
 
 /*
- * Extends the .sr-only class to allow the element
+ * Extends the .visuallyhidden class to allow the element
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
  */
 
-.sr-only.focusable:active,
-.sr-only.focusable:focus {
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
   clip: auto;
   height: auto;
   margin: 0;
   overflow: visible;
   position: static;
-  white-space: inherit;
   width: auto;
+  white-space: inherit;
 }
 
 /*
@@ -506,13 +510,15 @@ input[type=button] {
  *    `:before` to contain the top-margins of child elements.
  */
 
-.clearfix::before,
-.clearfix::after {
+.clearfix:before,
+.clearfix:after {
   content: " ";
+  /* 1 */
   display: table;
+  /* 2 */
 }
 
-.clearfix::after {
+.clearfix:after {
   clear: both;
 }
 
@@ -522,23 +528,23 @@ input[type=button] {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 768px) {
-  /* Tablet styles here */
-  
+@media only screen and (min-width:768px) {
+  /*Tablet styles here*/
+
   /* General styles */
   .content-wrapper {
     max-width: 640px;
     margin: 100px 0;
   }
-
+      
   h2 {
     font-size: 2.25em;
     line-height: 1.333;
   }
 
   h3 {
-    font-size: 1.5em;
-    line-height: 1.25;
+      font-size: 1.5em;
+      line-height: 1.25;
   }
 
   /* Header */
@@ -557,7 +563,7 @@ input[type=button] {
   }
 
   header nav {
-    width: 30%;
+    width: 20%;
   }
 
   header nav ul {
@@ -573,15 +579,15 @@ input[type=button] {
   .hero-area {
     min-height: 600px;
   }
-
+  
   .hero-area h1 {
     font-size: 3em;
     line-height: 1;
     margin: 0;
-  }
+}
 
   /* Aside */
-
+  
   aside .content-wrapper {
     margin: 50px 0;
     display: flex;
@@ -608,13 +614,16 @@ input[type=button] {
     flex-flow: column wrap;
     flex-basis: 50%;
   }
-
+  
   .features .features-item-description {
     width: 62%;
   }
 
-  /* Reviews */
+  .features i {
+    margin-bottom: 30px;
+  }
 
+  /* Reviews */
   .reviews article {
     display: flex;
     justify-content: space-between;
@@ -633,9 +642,7 @@ input[type=button] {
     width: 75%;
     margin: 0;
   }
-
   /* Footer */
-
   footer .content-wrapper {
     width: 65%;
     margin: 100px 0;
@@ -658,14 +665,14 @@ input[type=button] {
   }
 
   footer p {
-    line-height: 1.285;
+      line-height: 1.285;
   }
 
   footer .social-icons {
     width: 12.5em;
     justify-content: space-between;
   }
-
+  
   footer .copyright {
     width: 100%;
   }
@@ -673,14 +680,14 @@ input[type=button] {
   /* ==========================================================================
    About Page
    ========================================================================== */
-  
+
   .mission-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 20px
+    padding-top: 20px;
   }
-  
+
   .mission-content p {
     width: 45%;
   }
@@ -688,11 +695,11 @@ input[type=button] {
   .map figure {
     padding-bottom: 45.5%;
   }
-  
+
   .contact-section .content-wrapper h2 {
     width: 80%;
   }
-  
+
   .contact-content {
     display: flex;
     justify-content: space-between;
@@ -702,32 +709,32 @@ input[type=button] {
   .contact-content h4 {
     font-size: 1.5em;
   }
-  
+
   /* ==========================================================================
    FAQ Page
    ========================================================================== */
-  
+
   .faq .content-wrapper {
     justify-content: space-between;
   }
-  
+
   .faq-content {
     flex-basis: 45%;
   }
-  
+
   .faq h2 {
     width: 100%;
   }
 
   .faq h4,
   .faq p {
-    font-size: 0.875em;
-    line-height: 1.125;
+      font-size: .875em;
+      line-height: 1.125;
   }
 }
 
-@media only screen and (min-width: 1200px) {
-  /* Desktop styles here */
+@media only screen and (min-width:1200px) {
+  /*Desktop styles here*/
 
   header {
     padding: 15px 0;
@@ -743,23 +750,21 @@ input[type=button] {
 
   h3,
   h4 {
-    font-size: 1.875;
+      font-size: 1.875em;
   }
 
   p {
-    font-size: 1.125em;
-    line-height: 1.333;
+      font-size: 1.125em;
+      line-height: 1.333;
   }
 
   /* Hero */
-
   .hero-area h1 {
     font-size: 3.75em;
     width: 80%;
   }
 
   /* Aside */
-
   aside .content-wrapper {
     justify-content: space-around;
   }
@@ -782,13 +787,13 @@ input[type=button] {
   .features article {
     flex-basis: 33%;
   }
-
+  
   /* Reviews */
-
+  
   .reviews h2 {
-    padding-bottom: 50px;
+    padding-bottom: 50px; 
   }
-
+  
   .reviews article div {
     width: 42%;
   }
@@ -800,15 +805,14 @@ input[type=button] {
   /* ==========================================================================
   About Page
   ========================================================================== */
-  
   .map figure {
     padding-bottom: 37.5%;
   }
-  
+
   .mission h2,
   .contact-section .content-wrapper h2 {
-    width: 95%;
-    font-size: 3em;
+      width: 95%;
+      font-size: 3em;
   }
 
   .contact-content h4 {
@@ -818,92 +822,92 @@ input[type=button] {
   /* ==========================================================================
   FAQ Page
   ========================================================================== */
-
   .faq h2 {
     width: 100%;
     font-size: 3em;
   }
-
+    
   .faq h4,
   .faq p {
-    font-size: 1.125em;
-    line-height: 1;
+      font-size: 1.125em;
+      line-height: 1;
   }
 }
-
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-  *,
-  *::before,
-  *::after {
-    background: #fff !important;
-    color: #000 !important;
-    /* Black prints faster */
-    box-shadow: none !important;
-    text-shadow: none !important;
+  
+  
+  /* ==========================================================================
+     Print styles.
+     Inlined to avoid the additional HTTP request:
+     https://www.phpied.com/delay-loading-your-print-css/
+     ========================================================================== */
+  
+  @media print {
+    *,
+    *::before,
+    *::after {
+      background: #fff !important;
+      color: #000 !important;
+      /* Black prints faster */
+      box-shadow: none !important;
+      text-shadow: none !important;
+    }
+  
+    a,
+    a:visited {
+      text-decoration: underline;
+    }
+  
+    a[href]::after {
+      content: " (" attr(href) ")";
+    }
+  
+    abbr[title]::after {
+      content: " (" attr(title) ")";
+    }
+  
+    /*
+     * Don't show links that are fragment identifiers,
+     * or use the `javascript:` pseudo protocol
+     */
+    a[href^="#"]::after,
+    a[href^="javascript:"]::after {
+      content: "";
+    }
+  
+    pre {
+      white-space: pre-wrap !important;
+    }
+  
+    pre,
+    blockquote {
+      border: 1px solid #999;
+      page-break-inside: avoid;
+    }
+  
+    /*
+     * Printing Tables:
+     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
+     */
+    thead {
+      display: table-header-group;
+    }
+  
+    tr,
+    img {
+      page-break-inside: avoid;
+    }
+  
+    p,
+    h2,
+    h3 {
+      orphans: 3;
+      widows: 3;
+    }
+  
+    h2,
+    h3 {
+      page-break-after: avoid;
+    }
   }
-
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
-
-  a[href]::after {
-    content: " (" attr(href) ")";
-  }
-
-  abbr[title]::after {
-    content: " (" attr(title) ")";
-  }
-
-  /*
-   * Don't show links that are fragment identifiers,
-   * or use the `javascript:` pseudo protocol
-   */
-  a[href^="#"]::after,
-  a[href^="javascript:"]::after {
-    content: "";
-  }
-
-  pre {
-    white-space: pre-wrap !important;
-  }
-
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
-
-  /*
-   * Printing Tables:
-   * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-   */
-  thead {
-    display: table-header-group;
-  }
-
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
-
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
-
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
-}
-
+  
+  
